Beginning to fix header overlap bug, adds variable support for mutations

--- a/src/assets/style/tabs.scss
+++ b/src/assets/style/tabs.scss
@@ -8,7 +8,7 @@
 .tab_list-response {
 	background-color: $medgray;
 	height: 42px;
-	padding-bottom: 30px;
+	// padding-top: 30px;
 	position: sticky;
 	top: 0;
 	width: 100%;
